--- a/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
+++ b/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
@@ -12,10 +12,12 @@
         <action
             android:id="@+id/action_signFragment_to_homeFragment"
             app:destination="@id/homeFragment"
+            app:popUpTo="@id/signFragment"
+            app:popUpToInclusive="true"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
