Toolbar signout logo added

--- a/QuickQuestions/app/src/main/res/layout/fragment_home.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_home.xml
@@ -16,9 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginEnd="@dimen/small_margin"
             android:orientation="horizontal">
 
             <TextView
@@ -29,7 +31,13 @@
                 android:textColor="@color/textColorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-        </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_signout"
+                android:layout_alignParentEnd="true"/>
+        </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
