--- a/QuickQuestions/app/src/main/res/layout/fragment_home.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,15 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:id="@+id/view_curved_rectangle"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:background="@drawable/curved_rectangular"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+
     <!-- TODO: Update blank fragment layout -->
 
 
