--- a/QuickQuestions/app/src/main/res/layout/category_card_view.xml
+++ b/QuickQuestions/app/src/main/res/layout/category_card_view.xml
@@ -2,12 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/category_card"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="@dimen/large_margin"
     app:cardBackgroundColor="@color/colorSecondaryDark"
     app:cardElevation="@dimen/small_margin"
     app:cardCornerRadius="10dp">
 
     <TextView
+        android:id="@+id/category_card_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/title_text_size"
