--- a/QuickQuestions/app/src/main/res/layout/category_card_view.xml
+++ b/QuickQuestions/app/src/main/res/layout/category_card_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     android:id="@+id/category_card"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/large_margin"
