--- a/QuickQuestions/app/src/main/res/drawable/splash_background.xml
+++ b/QuickQuestions/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorPrimaryDark"></item>
+    <item android:drawable="@color/colorPrimary"></item>
     <item>
         <bitmap
             android:gravity="center"
