--- a/QuickQuestions/app/src/main/res/layout/category_card_view.xml
+++ b/QuickQuestions/app/src/main/res/layout/category_card_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/category_card"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/large_margin"
-    app:cardBackgroundColor="@color/colorSecondaryDark"
+    app:cardBackgroundColor="@color/colorPrimaryDark"
     app:cardElevation="@dimen/small_margin"
     app:cardCornerRadius="10dp">
 
