--- a/QuickQuestions/app/src/main/res/layout/fragment_home.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/quicksand"
-                        android:text="Welcome Ebubekir"
+                        android:text="@string/welcome"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp"
                         android:textStyle="bold" />
