--- a/QuickQuestions/app/src/main/res/layout/quiz_list_view.xml
+++ b/QuickQuestions/app/src/main/res/layout/quiz_list_view.xml
@@ -14,14 +14,12 @@
             android:id="@+id/quiz_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kotlin"
             android:textSize="24sp"
             android:textColor="@color/colorPrimaryDark"/>
         <TextView
             android:id="@+id/quiz_list_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Develop with Kotlin"
             android:textSize="14sp"
             android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
@@ -34,5 +32,5 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="0dp"
         android:foregroundGravity="center"
-        android:text="Start" />
+        android:text="@string/start" />
 </RelativeLayout>
