--- a/QuickQuestions/app/src/main/res/layout/fragment_home.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_home.xml
@@ -50,6 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
+                        android:onClick="@{() -> viewModel.signOut()}"
                         android:src="@drawable/ic_signout" />
                 </RelativeLayout>
 
