--- a/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
+++ b/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
@@ -23,5 +23,11 @@
         android:id="@+id/homeFragment"
         android:name="com.ess.quickquestions.ui.homeview.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_signFragment"
+            app:destination="@id/signFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
 </navigation>
