--- a/QuickQuestions/app/src/main/res/layout/activity_main.xml
+++ b/QuickQuestions/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"/>
 
     <fragment
         android:id="@+id/sign_fragment"
@@ -17,4 +22,4 @@
         app:navGraph="@navigation/main_navigation"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
