--- a/QuickQuestions/app/src/main/res/layout/fragment_question.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_question.xml
@@ -27,6 +27,7 @@
             android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="150dp"
             android:text="TextView"
             android:textColor="@color/textColorPrimary"
             android:textSize="28sp"
