--- a/QuickQuestions/app/src/main/res/values/colors.xml
+++ b/QuickQuestions/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textGreyColor">#D3D3D3</color>
+    <color name="textBlackColor">#000000</color>
 </resources>
