--- a/QuickQuestions/app/src/main/res/layout/fragment_question.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_question.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ess.quickquestions.ui.questionview.QuestionViewModel" />
@@ -17,25 +18,151 @@
         <View
             android:id="@+id/view_curved_rectangle"
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:background="@drawable/bottom_circular_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="150dp"
+            android:layout_marginBottom="100dp"
             android:text="TextView"
             android:textColor="@color/textColorPrimary"
             android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="@+id/view_curved_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/home_toolbar" />
+            app:layout_constraintStart_toStartOf="parent" />
 
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/view_curved_rectangle">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/option_card_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Question_Card_View">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/small_padding">
+
+                    <ImageButton
+                        android:id="@+id/button_option"
+                        android:background="@drawable/circle_button"
+                        style="@style/Question_Image_Button"/>
+
+                    <TextView
+                        android:id="@+id/option_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Option 1"
+                        style="@style/Question_Text_Style"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/option_card_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Question_Card_View">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/small_padding">
+
+                    <ImageButton
+                        android:id="@+id/button_option_2"
+                        android:background="@drawable/circle_button"
+                        style="@style/Question_Image_Button"/>
+
+                    <TextView
+                        android:id="@+id/option_text_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Option 2"
+                        style="@style/Question_Text_Style"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/option_card_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Question_Card_View">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/small_padding">
+
+                    <ImageButton
+                        android:id="@+id/button_option_3"
+                        android:background="@drawable/circle_button"
+                        style="@style/Question_Image_Button"/>
+
+                    <TextView
+                        android:id="@+id/option_text_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Option 3"
+                        style="@style/Question_Text_Style"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/option_card_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Question_Card_View">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/small_padding">
+
+                    <ImageButton
+                        android:id="@+id/button_option_4"
+                        android:background="@drawable/circle_button"
+                        style="@style/Question_Image_Button"/>
+
+                    <TextView
+                        android:id="@+id/option_text_4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Option 4"
+                        style="@style/Question_Text_Style"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="@dimen/small_margin"
+            android:background="@color/colorPrimary"
+            android:text="Submit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
