--- a/QuickQuestions/app/src/main/res/values/styles.xml
+++ b/QuickQuestions/app/src/main/res/values/styles.xml
@@ -42,4 +42,23 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="Question_Text_Style" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/textBlackColor</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginStart">@dimen/large_margin</item>
+    </style>
+
+    <style name="Question_Image_Button" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:backgroundTint">@color/textGreyColor</item>
+    </style>
+
+    <style name="Question_Card_View" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">10dp</item>
+        <item name="android:layout_margin">@dimen/small_margin</item>
+        <item name="cardElevation">3dp</item>
+    </style>
 </resources>
