Option not selected control made and text size changed in the question

--- a/QuickQuestions/app/src/main/res/layout/fragment_question.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_question.xml
@@ -28,12 +28,14 @@
             android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
+            android:layout_marginRight="@dimen/small_margin"
             android:layout_marginBottom="125dp"
+            android:textAlignment="center"
             android:textColor="@color/textColorPrimary"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/view_curved_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
