Score getting from the question and navigation to finish screen

--- a/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -8,16 +9,19 @@
             type="com.ess.quickquestions.ui.finishview.FinishViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.finishview.FinishFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
-
-    </FrameLayout>
+        <View
+            android:id="@+id/view_curved_rectangle"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:background="@drawable/bottom_circular_rectangle"
+            android:backgroundTint="@color/correctGreen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
