--- a/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
+++ b/QuickQuestions/app/src/main/res/navigation/main_navigation.xml
@@ -53,5 +53,10 @@
             android:name="score"
             app:argType="integer"
             android:defaultValue="0" />
+        <action
+            android:id="@+id/action_finishFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/finishFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 </navigation>
