Text suggestion allignment centered

--- a/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
@@ -70,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:text="You should take the quiz again"
+            android:textAlignment="center"
             android:textColor="@color/textColorPrimary"
             android:textSize="28sp"
             android:visibility="gone"
