--- a/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_finish.xml
@@ -78,5 +78,16 @@
             app:layout_constraintStart_toStartOf="@+id/view_curved_rectangle"
             app:layout_constraintTop_toBottomOf="@+id/text_score" />
 
+        <include
+            android:id="@+id/loadingAnimationInclude"
+            android:visibility="gone"
+            layout="@layout/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
